@@ -17,10 +17,6 @@
 
 package org.apache.shardingsphere.test.e2e.mcp.runtime.production;
 
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.hasItems;
-import static org.hamcrest.Matchers.is;
-
 import org.apache.shardingsphere.mcp.bootstrap.transport.MCPTransportConstants;
 import org.apache.shardingsphere.mcp.support.markdown.MCPMarkdownResourceLoader;
 import org.apache.shardingsphere.test.e2e.mcp.support.runtime.RuntimeTransport;
@@ -35,25 +31,33 @@ import java.util.List;
 import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.hamcrest.Matchers.hasItems;
+import static org.hamcrest.Matchers.is;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @EnabledIf("isEnabled")
 class ProductionMySQLRuntimeE2ETest extends AbstractProductionMySQLRuntimeE2ETest {
     
+    @Override
+    protected boolean useSharedRuntimeFixture() {
+        return true;
+    }
+    
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertReadCapabilitiesWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
             Map<String, Object> actual = interactionClient.readResource("shardingsphere://databases/logic_db/capabilities");
             assertThat(String.valueOf(actual.get("databaseType")), is("MySQL"));
-            assertThat(String.valueOf(actual.get("supportsExplainAnalyze")), is("true"));
+            assertThat(String.valueOf(actual.get("supportsExplain")), is("true"));
         }
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertReadDatabasesResourceWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
@@ -62,7 +66,7 @@ class ProductionMySQLRuntimeE2ETest extends AbstractProductionMySQLRuntimeE2ETes
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertServiceCapabilitiesResourceWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
@@ -71,21 +75,21 @@ class ProductionMySQLRuntimeE2ETest extends AbstractProductionMySQLRuntimeE2ETes
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertListToolsWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
             List<Map<String, Object>> actual = interactionClient.listTools();
             assertOfficialToolNames(actual.stream().map(each -> String.valueOf(each.get("name"))).toList());
             assertToolDefinition(actual, "database_gateway_search_metadata", "Search Metadata", "", "object_types", "array");
-            assertToolDefinition(actual, "database_gateway_validate_proxy_connectivity", "Validate Proxy Connectivity", "database", "database", "string");
+            assertToolDefinition(actual, "database_gateway_validate_runtime_database", "Validate Runtime Database", "database", "database", "string");
             assertToolDefinition(actual, "database_gateway_execute_query", "Execute Query SQL", "sql", "timeout_ms", "integer");
-            assertToolDefinition(actual, "database_gateway_execute_update", "Execute Update SQL", "sql", "timeout_ms", "integer");
+            assertToolDefinition(actual, "database_gateway_execute_update", "Preview or Execute Side-Effecting SQL", "sql", "timeout_ms", "integer");
         }
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertListResourcesWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
@@ -94,7 +98,7 @@ class ProductionMySQLRuntimeE2ETest extends AbstractProductionMySQLRuntimeE2ETes
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertListResourceTemplatesWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
@@ -107,44 +111,44 @@ class ProductionMySQLRuntimeE2ETest extends AbstractProductionMySQLRuntimeE2ETes
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertRejectUnsupportedResourceUriWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
             String requestId = "resources-read-unsupported-1";
             Map<String, Object> actual = interactionClient.sendRawRequest(requestId, "resources/read", Map.of("uri", "unsupported://resource"));
             assertJsonRpcErrorWithoutResult(actual, requestId);
-            assertFalse(getMap(actual.get("result")).containsKey("contents"));
-            assertThat(String.valueOf(getMap(actual.get("error")).get("message")), is("Resource not found"));
+            assertFalse(getObjectOrEmpty(actual.get("result")).containsKey("contents"));
+            assertThat(String.valueOf(getObjectOrEmpty(actual.get("error")).get("message")), is("Resource not found"));
         }
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertRejectUnsupportedToolNameWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
             String requestId = "tools-call-unsupported-1";
             Map<String, Object> actual = interactionClient.sendRawRequest(requestId, "tools/call", Map.of("name", "unsupported_tool", "arguments", Map.of()));
             assertJsonRpcErrorWithoutResult(actual, requestId);
-            assertFalse(getMap(actual.get("result")).containsKey("isError"));
+            assertFalse(getObjectOrEmpty(actual.get("result")).containsKey("isError"));
         }
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertInitializeExposesMarkdownInstructionsWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
-            Map<String, Object> actualResult = getMap(interactionClient.getInitializePayload().get("result"));
+            Map<String, Object> actualResult = getObjectOrEmpty(interactionClient.getInitializePayload().get("result"));
             String actualInstructions = String.valueOf(actualResult.get("instructions"));
-            assertThat(actualInstructions, is(MCPMarkdownResourceLoader.loadRequired(MCPTransportConstants.SERVER_INSTRUCTIONS_RESOURCE, "server instruction")));
+            assertThat(actualInstructions, is(MCPMarkdownResourceLoader.load(MCPTransportConstants.SERVER_INSTRUCTIONS_RESOURCE, "server instruction")));
             assertThat(actualInstructions.lines().findFirst().orElse(""), is("Apache ShardingSphere MCP."));
         }
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertServerInstructionsAreNotListedAsResourceWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
@@ -174,14 +178,14 @@ class ProductionMySQLRuntimeE2ETest extends AbstractProductionMySQLRuntimeE2ETes
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertReadTableDetailWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
             List<Map<String, Object>> items = getPayloadItems(interactionClient.readResource(
                     String.format("shardingsphere://databases/%s/schemas/%s/tables/orders", LOGICAL_DATABASE_NAME, LOGICAL_DATABASE_NAME)));
             assertThat(items.size(), is(1));
-            Map<String, Object> actualItem = items.get(0);
+            Map<String, Object> actualItem = items.getFirst();
             assertThat(String.valueOf(actualItem.get("table")), is("orders"));
             assertThat(getNestedNames(actualItem, "columns", "column"), is(List.of("amount", "order_id", "status")));
             assertThat(getNestedNames(actualItem, "indexes", "index"), containsInAnyOrder("PRIMARY", "idx_orders_status"));
@@ -189,7 +193,7 @@ class ProductionMySQLRuntimeE2ETest extends AbstractProductionMySQLRuntimeE2ETes
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertSearchMetadataTablesAndViewsWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
@@ -200,19 +204,19 @@ class ProductionMySQLRuntimeE2ETest extends AbstractProductionMySQLRuntimeE2ETes
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertReadViewsWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
             List<Map<String, Object>> items = getPayloadItems(interactionClient.readResource(
                     String.format("shardingsphere://databases/%s/schemas/%s/views", LOGICAL_DATABASE_NAME, LOGICAL_DATABASE_NAME)));
             assertThat(items.size(), is(1));
-            assertThat(String.valueOf(items.get(0).get("view")), is("active_orders"));
+            assertThat(String.valueOf(items.getFirst().get("view")), is("active_orders"));
         }
     }
     
     @ParameterizedTest(name = "{0}")
-    @MethodSource("transports")
+    @MethodSource("semanticPrimaryTransport")
     void assertReadIndexesWithActualMySQLBackend(final String name, final RuntimeTransport transport) throws IOException, InterruptedException {
         useTransport(transport);
         try (MCPInteractionClient interactionClient = createOpenedInteractionClient()) {
